added ref, proving schema lessness in noSQL databases

--- a/tex/background-repos.tex
+++ b/tex/background-repos.tex
@@ -22,7 +22,7 @@
 
 \subsection{Graph Database schema and the Entity Relation model}
 \label{sec:graph-db:er}
-Relational databases have established a supremacy over the time, it is therefore standardized, how to convert formal modeling approaches like entity-relationship (ER) models into a relational schema \cite{Saake2010,Teorey1986}. With the introduction of so called noSQL databases, which break with classic relational design, modeling schema got optional. Due to most new databases following the noSQL paradigm, do not rely on strong and fixed data structures \todo{cite}.
+Relational databases have established a supremacy over the time, it is therefore standardized, how to convert formal modeling approaches like entity-relationship (ER) models into a relational schema \cite{Saake2010,Teorey1986}. With the introduction of so called noSQL databases, which break with classic relational design, modeling schema got optional. Due to most new databases following the noSQL paradigm, do not rely on strong and fixed data structures \cite{Tudorica2011}.
 Since architectural planing and design is an essential part of software development, it is still useful to define formal data structure and relations.
 
 Even though \neoj, introduced in Section \ref{sec:graph-db}, is part of the schema-free noSQL, it provides mechanisms to imply and enforce them\footnote{\url{https://neo4j.com/docs/developer-manual/current/cypher\#cypher-schema}}.
