--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -709,4 +709,18 @@ The methodology produces database designs that are not only accurate representat
   file = {Table of Contents PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/ZTK2XG7X/Saake et al. - 2010 - Datenbanken Konzepte und Sprachen.pdf:application/pdf}
 }
 
+@inproceedings{Tudorica2011,
+  title = {A Comparison between Several {{NoSQL}} Databases with Comments and Notes},
+  doi = {10.1109/RoEduNet.2011.5993686},
+  abstract = {This paper is trying to comment on the various NoSQL (Not only Structured Query Language) systems and to make a comparison (using multiple criteria) between them. The NoSQL databases were created as a mean to offer high performance (both in terms of speed and size) and high availability at the price of loosing the ACID (Atomic, Consistent, Isolated, Durable) trait of the traditional databases in exchange with keeping a weaker BASE (Basic Availability, Soft state, Eventual consistency) feature. Remains to be seen which of the multiple solutions created since the official appearance of the NoSQL concept (which was defined in 1998 and reintroduced in 2009, around which moment several NoSQL solutions emerged; at the present moment there are known over 120 such solutions) are really delivering on these promises of higher performance (although several of them are already used with very good results).},
+  timestamp = {2016-10-10T12:48:22Z},
+  booktitle = {2011 {{RoEduNet International Conference}} 10th {{Edition}}: {{Networking}} in {{Education}} and {{Research}}},
+  author = {Tudorica, B. G. and Bucur, C.},
+  month = jun,
+  year = {2011},
+  keywords = {ACID,atomic consistent isolated durable database trait,Availability,BASE,basic availability soft state eventual consistency feature,Benchmark testing,comparison,database,Distributed databases,Generators,Google,NoSQL,NoSQL databases,not only structured query language systems,performance,SQL,Taxonomy},
+  pages = {1--5},
+  file = {IEEE Xplore Full Text PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/IUTNH4J8/Tudorica and Bucur - 2011 - A comparison between several NoSQL databases with .pdf:application/pdf;IEEE Xplore Abstract Record:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/E6SMQZTP/5993686.html:text/html}
+}
+
 
