--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -38,7 +38,7 @@ Each \texttt{DiffEntry} links to at least on \texttt{ModleEntityType} or \texttt
 For instance a \texttt{DiffInsert} links to a \texttt{ModelEntityType} or \texttt{ModelEntity} of \emph{Version B} with a \texttt{new\_entity} relation.
 In contrast a \texttt{DiffDelete} links to \emph{Version A} with \texttt{old\_entity} to either a \texttt{ModelEntityType} or a \texttt{ModelEntity}. Whereby \texttt{DiffMove} and \texttt{DiffModify} use both relations \texttt{old\_entity} - linking to \emph{Version A} - and \texttt{new\_entity} - linking to Version B.
 
-Additionally a \texttt{DiffEntry} can link to an \texttt{OntologyTerm}, which again can be hierarchical relating to another \texttt{OntologyTerm}. Those terms are taken from the \comodi ontology \cite{Scharm2016}, cf. section \ref{sec:background:comodi}.
+Additionally a \texttt{DiffEntry} can link to an \texttt{OntologyTerm}, which again can be hierarchical relating to another \texttt{OntologyTerm}. Those terms are taken from the \comodi ontology \cite{Scharm2016}, cf. Section \ref{sec:background:onto:comodi}.
 
 \todo{add table (or similar) of all entities and relations in the appendix}
 \todo{make visible, that ER model is just a sub-ER}
