added general section about model repositories and necessary bib refs

--- a/tex/background-repos.tex
+++ b/tex/background-repos.tex
@@ -1,11 +1,18 @@
 % !TeX spellcheck = en_US
 \section{Existing Model repositories}
-\todo{}
+Over the time modeling evolved to one of the major methods in Computational and Systems Biology \cite{Finkelstein2004}. Thus more and more data in terms of models were produced and grow more complex. \cite{Henkel2010} As a result a number of projects require the reuse and recomposition of models, which prove to be difficult, if there is no central database available. \cite{Waltemath2013}
+Out of this need, multiple projects started to collect, curate, and distribute models, to improve overall reusebility.
+The two major repositories, which I choose to focus on are, on the one hand \emph{BioModels Database}\footnote{\url{https://www.ebi.ac.uk/biomodels-main/}} \cite{Li2010}, focusing on \sbml encoded models and on the other hand the \emph{Physiome Model Repository}\footnote{\url{http://models.cellml.org/cellml}} (PMR2) \cite{Yu2011}, which is mainly providing \cellml encoded models.
 
+However, these existing model repositories provide a rich set of information about the model itself, it is now important to focus on associated information. Integrating additional information, as simulation experiments descriptions (SED), result information ,and publication and author references, will increase the reusebility even further \cite{Waltemath2013,Henkel2012}.
+
+
+\begin{comment}
 \begin{itemize}
 	\item use/cite mostly introduction from \cite{Waltemath2013}
 	\item maybe also cite \cite{Lysenko2016}?
 \end{itemize}
+\end{comment}
 
 \section{Using graph databases to store \sysbio models}
 \label{sec:backgroung:graph-db}
