--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -647,7 +647,8 @@ of the compendium concept itself.},
   year = {2010},
   note = {OCLC: 680676568},
   keywords = {Datenbankentwurf,Datenbanksprache,Datenbanksystem},
-  annote = {Literaturverz. S. 729 - 750}
+  annote = {Literaturverz. S. 729 - 750},
+  file = {Table of Contents PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/ZTK2XG7X/Saake et al. - 2010 - Datenbanken Konzepte und Sprachen.pdf:application/pdf}
 }
 
 @article{Lysenko2016,
@@ -663,7 +664,8 @@ of the compendium concept itself.},
   journal = {BioData Mining},
   author = {Lysenko, Artem and Roznov{\u a}{\c t}, Irina A. and Saqi, Mansoor and Mazein, Alexander and Rawlings, Christopher J and Auffray, Charles},
   month = dec,
-  year = {2016}
+  year = {2016},
+  file = {Lysenko et al. - 2016 - Representing and querying disease networks using g.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/FXTEXR8C/Lysenko et al. - 2016 - Representing and querying disease networks using g.pdf:application/pdf}
 }
 
 @inproceedings{Tudorica2011,
@@ -676,7 +678,8 @@ of the compendium concept itself.},
   month = jun,
   year = {2011},
   keywords = {ACID,atomic consistent isolated durable database trait,Availability,BASE,basic availability soft state eventual consistency feature,Benchmark testing,comparison,database,Distributed databases,Generators,Google,NoSQL,NoSQL databases,not only structured query language systems,performance,SQL,Taxonomy},
-  pages = {1--5}
+  pages = {1--5},
+  file = {IEEE Xplore Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/IUTNH4J8/Tudorica and Bucur - 2011 - A comparison between several NoSQL databases with .pdf:application/pdf;IEEE Xplore Abstract Record:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/E6SMQZTP/5993686.html:text/html}
 }
 
 @article{Teorey1986,
@@ -694,7 +697,8 @@ The methodology produces database designs that are not only accurate representat
   author = {Teorey, Toby J. and Yang, Dongqing and Fry, James P.},
   month = jun,
   year = {1986},
-  pages = {197--222}
+  pages = {197--222},
+  file = {ACM Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/V7RRXJZP/Teorey et al. - 1986 - A Logical Design Methodology for Relational Databa.pdf:application/pdf}
 }
 
 @article{Courtot2011,
@@ -715,7 +719,94 @@ The methodology produces database designs that are not only accurate representat
   year = {2011},
   keywords = {dynamics,kinetics,model,ontology,simulation},
   pages = {543},
+  file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/NXUFBDNV/Courtot et al. - 2011 - Controlled vocabularies and semantics in systems b.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/ENN6QFVV/543.html:text/html},
   pmid = {22027554}
+}
+
+@article{Finkelstein2004,
+  title = {Computational Challenges of Systems Biology},
+  volume = {37},
+  issn = {0018-9162},
+  doi = {10.1109/MC.2004.1297236},
+  timestamp = {2016-10-12T09:01:19Z},
+  number = {5},
+  urldate = {2016-10-12},
+  url = {http://ieeexplore.ieee.org/document/1297236/},
+  journal = {Computer},
+  author = {Finkelstein, A. and Hetherington, J. and {Linzhong Li} and Margoninski, O. and Saffrey, P. and Seymour, R. and Warner, A.},
+  month = may,
+  year = {2004},
+  pages = {26--33},
+  file = {Finkelstein et al. - 2004 - Computational challenges of systems biology.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/PA4GW5HB/Finkelstein et al. - 2004 - Computational challenges of systems biology.pdf:application/pdf}
+}
+
+@article{Henkel2010,
+  title = {Ranked Retrieval of {{Computational Biology}} Models},
+  volume = {11},
+  issn = {1471-2105},
+  doi = {10.1186/1471-2105-11-423},
+  abstract = {The study of biological systems demands computational support. If targeting a biological problem, the reuse of existing computational models can save time and effort. Deciding for potentially suitable models, however, becomes more challenging with the increasing number of computational models available, and even more when considering the models' growing complexity. Firstly, among a set of potential model candidates it is difficult to decide for the model that best suits ones needs. Secondly, it is hard to grasp the nature of an unknown model listed in a search result set, and to judge how well it fits for the particular problem one has in mind.},
+  timestamp = {2016-10-12T09:01:49Z},
+  urldate = {2016-10-12},
+  url = {http://dx.doi.org/10.1186/1471-2105-11-423},
+  journal = {BMC Bioinformatics},
+  author = {Henkel, Ron and Endler, Lukas and Peters, Andre and {Le Nov{\`e}re}, Nicolas and Waltemath, Dagmar},
+  year = {2010},
+  pages = {423},
+  annote = {Pages 423 in PDF},
+  file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/23X7MPAH/Henkel et al. - 2010 - Ranked retrieval of Computational Biology models.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/XI4SNTVZ/1471-2105-11-423.html:text/html}
+}
+
+@inproceedings{Henkel2012,
+  title = {Considerations of Graph-Based Concepts to Manage of Computational Biology Models and Associated Simulations},
+  abstract = {Over the past years various databases in Life Sciences have been developed , among them databases to handle computational models of biological systems. Exchange formats that represent these models are typically XML-based; they encode models as networks. Models are published together with supplementary materials such as annotations, simulation experiment descriptions , or result sets. In consequence, not only model files need to be managed, but also the associated simulation setups, and highly linked meta-information. We discuss here the use of graph databases for model storage as they well reflect this interrelated nature. They can also enhance the integrated management of computational models and associated meta-information, as they handle connections between models, simulation descriptions and result data files, as well as external knowledge. This property enhances version control, retrieval and ranking, thereby resulting in improved model reuse and result reproducibility. 1 Background Systems Biology is the study of complex biological systems by means of computational approaches and methods. A computational model of a biological system represents aspects of that system, often using mathematical equations. Modeling has become a major tool in the daily work of systems biologists. Consequently, the number of available models has grown steadily over the last decade, and so has the models\&\#39; complexity [He10]. To reuse existing model code, the code itself must, first, be made available in model databases. Second, it must be encoded in exchangeable standard formats, which can then be interpreted by software tools. BioModels Database [Li10] is one example of an open model repository that freely distributes models in standard format. Together with the model, a whole plethora of meta-information is provided,},
+  timestamp = {2016-10-12T09:12:42Z},
+  urldate = {2016-10-12},
+  url = {https://www.semanticscholar.org/paper/Considerations-of-graph-based-concepts-to-manage-Henkel-Nov\%C3\%A8re/54cc566f334063fc744d3348bd0f52ec916fd448},
+  author = {Henkel, Ron and {Le Nov{\`e}re}, Nicolas and Wolkenhauer, Olaf and Waltemath, Dagmar},
+  year = {2012},
+  keywords = {Biological Systems,Metainformation},
+  file = {Considerations of graph-based concepts to manage o.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/FVNSU9NB/Considerations of graph-based concepts to manage o.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/KSM65ETH/54cc566f334063fc744d3348bd0f52ec916fd448.html:text/html}
+}
+
+@article{Li2010,
+  title = {{{BioModels Database}}: {{An}} Enhanced, Curated and Annotated Resource for Published Quantitative Kinetic Models},
+  volume = {4},
+  issn = {1752-0509},
+  shorttitle = {{{BioModels Database}}},
+  doi = {10.1186/1752-0509-4-92},
+  abstract = {Quantitative models of biochemical and cellular systems are used to answer a variety of questions in the biological sciences. The number of published quantitative models is growing steadily thanks to increasing interest in the use of models as well as the development of improved software systems and the availability of better, cheaper computer hardware. To maximise the benefits of this growing body of models, the field needs centralised model repositories that will encourage, facilitate and promote model dissemination and reuse. Ideally, the models stored in these repositories should be extensively tested and encoded in community-supported and standardised formats. In addition, the models and their components should be cross-referenced with other resources in order to allow their unambiguous identification.},
+  timestamp = {2016-10-12T11:54:37Z},
+  urldate = {2016-10-12},
+  url = {http://dx.doi.org/10.1186/1752-0509-4-92},
+  journal = {BMC Systems Biology},
+  author = {Li, Chen and Donizelli, Marco and Rodriguez, Nicolas and Dharuri, Harish and Endler, Lukas and Chelliah, Vijayalakshmi and Li, Lu and He, Enuo and Henry, Arnaud and Stefan, Melanie I. and Snoep, Jacky L. and Hucka, Michael and {Le Nov{\`e}re}, Nicolas and Laibe, Camille},
+  year = {2010},
+  pages = {92},
+  annote = {Pages 92 in PDF},
+  file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/6CACSX6Q/Li et al. - 2010 - BioModels Database An enhanced, curated and annot.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/2K9S2VNU/1752-0509-4-92.html:text/html}
+}
+
+@article{Yu2011,
+  title = {The {{Physiome Model Repository}} 2},
+  volume = {27},
+  issn = {1367-4803, 1460-2059},
+  doi = {10.1093/bioinformatics/btq723},
+  abstract = {Motivation: The Physiome Model Repository 2 (PMR2) software was created as part of the IUPS Physiome Project (Hunter and Borg, 2003), and today it serves as the foundation for the CellML model repository. Key advantages brought to the end user by PMR2 include: facilities for model exchange, enhanced collaboration and a detailed change history for each model.
+Availability: PMR2 is available under an open source license at http://www.cellml.org/tools/pmr/; a fully functional instance of this software can be accessed at http://models.physiomeproject.org/.
+Contact: tommy.yu\{at\}auckland.ac.nz},
+  language = {en},
+  timestamp = {2016-10-12T11:57:40Z},
+  number = {5},
+  urldate = {2016-10-12},
+  url = {http://bioinformatics.oxfordjournals.org/content/27/5/743},
+  journal = {Bioinformatics},
+  author = {Yu, Tommy and Lloyd, Catherine M. and Nickerson, David P. and Cooling, Michael T. and Miller, Andrew K. and Garny, Alan and Terkildsen, Jonna R. and Lawson, James and Britten, Randall D. and Hunter, Peter J. and Nielsen, Poul M. F.},
+  month = jan,
+  year = {2011},
+  pages = {743--744},
+  file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/WXKNZ545/Yu et al. - 2011 - The Physiome Model Repository 2.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/G8SKD7V8/743.html:text/html},
+  pmid = {21216774}
 }
 
 
